logs/raptus.multilanguageurls.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/monkeypatcher'...
Listing './lib/python3.5/site-packages/collective/monkeypatcher/tests'...
Listing './lib/python3.5/site-packages/collective.monkeypatcher-1.1.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/raptus'...
Listing './lib/python3.5/site-packages/raptus/multilanguagefields'...
Listing './lib/python3.5/site-packages/raptus/multilanguagefields/Extensions'...
Listing './lib/python3.5/site-packages/raptus/multilanguagefields/i18n'...
Listing './lib/python3.5/site-packages/raptus/multilanguagefields/indexes'...
Listing './lib/python3.5/site-packages/raptus/multilanguagefields/indexes/dtml'...
Listing './lib/python3.5/site-packages/raptus/multilanguagefields/kss'...
Listing './lib/python3.5/site-packages/raptus/multilanguagefields/locales'...
Listing './lib/python3.5/site-packages/raptus/multilanguagefields/locales/de'...
Listing './lib/python3.5/site-packages/raptus/multilanguagefields/locales/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/raptus/multilanguagefields/locales/fr'...
Listing './lib/python3.5/site-packages/raptus/multilanguagefields/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/raptus/multilanguagefields/patches'...
Listing './lib/python3.5/site-packages/raptus/multilanguagefields/profiles'...
Listing './lib/python3.5/site-packages/raptus/multilanguagefields/profiles/default'...
Listing './lib/python3.5/site-packages/raptus/multilanguagefields/profiles/tests'...
Listing './lib/python3.5/site-packages/raptus/multilanguagefields/profiles/tests/types'...
Listing './lib/python3.5/site-packages/raptus/multilanguagefields/profiles/uninstall'...
Listing './lib/python3.5/site-packages/raptus/multilanguagefields/samples'...
Listing './lib/python3.5/site-packages/raptus/multilanguagefields/scripts'...
Compiling './lib/python3.5/site-packages/raptus/multilanguagefields/scripts/migrate.py'...
***   File "./lib/python3.5/site-packages/raptus/multilanguagefields/scripts/migrate.py", line 47
    print "starting migration of %s" % path
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/raptus/multilanguagefields/skins'...
Listing './lib/python3.5/site-packages/raptus/multilanguagefields/skins/multilanguagefields'...
Compiling './lib/python3.5/site-packages/raptus/multilanguagefields/skins/multilanguagefields/collectKeywords.py'...
***   File "./lib/python3.5/site-packages/raptus/multilanguagefields/skins/multilanguagefields/collectKeywords.py", line 34
    return result
                ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/raptus/multilanguagefields/skins/multilanguagefields/convertContentForKupu.py'...
***   File "./lib/python3.5/site-packages/raptus/multilanguagefields/skins/multilanguagefields/convertContentForKupu.py", line 25
    return str(content)
    ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/raptus/multilanguagefields/skins/multilanguagefields/multilanguage_widgets'...
Listing './lib/python3.5/site-packages/raptus/multilanguagefields/tests'...
Listing './lib/python3.5/site-packages/raptus/multilanguagefields/validators'...
Listing './lib/python3.5/site-packages/raptus/multilanguagefields/www'...
Listing './lib/python3.5/site-packages/raptus/multilanguageurls'...
Compiling './lib/python3.5/site-packages/raptus/multilanguageurls/patches.py'...
***   File "./lib/python3.5/site-packages/raptus/multilanguageurls/patches.py", line 129
    raise NotFound, name
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/raptus/multilanguageurls/profiles'...
Listing './lib/python3.5/site-packages/raptus/multilanguageurls/profiles/default'...
Listing './lib/python3.5/site-packages/raptus/multilanguageurls/skins'...
Listing './lib/python3.5/site-packages/raptus/multilanguageurls/skins/raptus_multilanguageurls'...
Listing './lib/python3.5/site-packages/raptus.multilanguagefields-1.0.egg-info'...
Listing './lib/python3.5/site-packages/raptus.multilanguageurls-1.0a9.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
